# gazebo_rad_obstacle

./: CMakeLists.txt  README.md  package.xml
gazebo_files/: build.sh
gazebo_files/concrete_20_2400_1000/: model.sdf.erb
gazebo_models/: build.sh  cleanup.sh
gazebo_models/concrete/: model.config  model.sdf
gazebo_models/concrete10x300x280/: model.config  model.sdf
gazebo_models/concrete20x300x280/: model.config  model.sdf
gazebo_models/concrete400x400x10/: model.config  model.sdf
gazebo_models/concrete400x400x20/: model.config  model.sdf
gazebo_models/concrete40x40x500/: model.config  model.sdf  model.sdf.erb
gazebo_models/concrete600x600x10/: model.config  model.sdf
gazebo_models/concrete600x600x20/: model.config  model.sdf
gazebo_models/concrete_10_600_460/: model.config  model.sdf
gazebo_models/concrete_10_600_500/: compile.sh  model.config  model.sdf  model.sdf.erb
gazebo_models/concrete_20_2400_1000/: model.sdf  model.sdf.erb
gazebo_models/concrete_20_2400_500/: model.config  model.sdf
gazebo_models/concrete_20_600_500/: model.config  model.sdf
gazebo_models/concrete_2400_20_1000/: model.config  model.sdf  model.sdf.erb
gazebo_models/concrete_2420_2420_20/: model.config  model.sdf
gazebo_models/concrete_40_40_500/: model.config  model.config.erb  model.sdf
gazebo_models/concrete_600_1200_20/: model.config  model.sdf
gazebo_models/concrete_80_80_1000/: model.config  model.sdf
gazebo_models/glass1x200x200/: model.config  model.sdf
gazebo_models/glass_1_200_200/: model.sdf
src/: gazebo_rad_obstacle.cpp  radiation_obstacle.cpp
(+20 files in other folders)
