<?xml version="1.0"?>
<package format="2">

  <name>gazebo_rad_obstacle</name>
  <version>0.0.0</version>
  <description>custom radiation obstacle</description>

  <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_rad_msgs</depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>

</package>
